fixed spacing on filter panels

--- a/client/src/styles/Filter.css
+++ b/client/src/styles/Filter.css
@@ -12,11 +12,8 @@ input[type="checkbox"] {
   font-weight: bold;
 }
 
-
 .filter-container {
-
   margin: 4em 0em -4em 1em;
-
 }
 
 .filter-checkbox-container {
@@ -70,7 +67,6 @@ input[type="checkbox"] {
   height: 1.3em;
 }
 
-
 .md-panel-column:hover {
   cursor: pointer;
 }
@@ -89,10 +85,7 @@ input[type="checkbox"] {
 .md-text {
   color: black;
   font-family: "Questrial", sans-serif;
-
   font-size: 2em;
-
-
   display: flex;
   justify-content: flex-start;
   letter-spacing: 3px;
@@ -101,7 +94,6 @@ input[type="checkbox"] {
 
 .md-icon {
   opacity: 0;
-
 }
 
 .md-panel-header {
@@ -116,6 +108,5 @@ input[type="checkbox"] {
 .md-panel-column {
   background-color: rgba(50, 191, 195, 0.5);
   height: 1.5em;
-  margin-bottom: 0.8em; 
   color: black;
 }
